# EyeGitness

./: README.md  eyegitness.spec  pyproject.toml  watch-git-diff.py
Licenses/: LICENSE.txt
src/: main.py  state.py  test.py  test2.py
src/ansi/: codes.py  colorizer.py
src/eyegitness/: main.py  state.py
src/eyegitness/ansi/: colorizer.py
src/eyegitness/git/: diff.py
src/eyegitness/keybinds/: global_keybinds.py
src/eyegitness/views/: commit_dialog.py  diff_view.py  file_list.py  layout.py  log_view.py  status_bar.py  tab_bar.py
src/git/: diff.py  stat.py
src/keybinds/: global_keybinds.py
src/views/: commit_dialog.py  diff_view.py  file_list.py  layout.py  log_view.py  status_bar.py  tab_bar.py
