[project]
name = "eyegitness"
version = "0.1.0"
description = "A terminal UI for visualizing git diffs and file status"
requires-python = ">=3.12"
dependencies = ["prompt_toolkit>=3.0"]

[project.scripts]
eyegitness = "eyegitness.main:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
